--- a/src/Components/product/ProductItem.css
+++ b/src/Components/product/ProductItem.css
@@ -70,3 +70,13 @@
   border: none;
   border-radius: 4px;
 }
+
+.bot {
+  display: block;
+  padding: 6px 1rem;
+  margin-bottom: 6px;
+  color: white;
+  background-color: #0d1b2a;
+  border: none;
+  border-radius: 4px;
+}
