--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,44 +1,95 @@
 .header {
-   background-color: #0d1b2a;
-   color: white;
-   display: flex;
-   padding: 1rem 10%;
-   justify-content: space-between;
-   align-items: center;
+  background-color: #0d1b2a;
+  position: sticky;
+  top: 0;
+  transition: all 0.5s;
+  z-index: 9;
+}
+.header > .container {
+  color: white;
+  display: flex;
+  padding: 1rem 0.5rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 p {
-   white-space: nowrap;
+  white-space: nowrap;
 }
 
-.header__middle, .header__right, .header__menu {
-   display: flex;
-   gap: 1rem;
-   align-items: center;
+.header__middle,
+.header__right,
+.header__menu {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
-.header__middle > p:hover, .header__right > p:hover {
-   color: #ff9100;
-   cursor: pointer;
+.header__middle > p:hover,
+.header__right > p:hover {
+  color: #ff9100;
+  cursor: pointer;
 }
 
 .logo {
-   color: black;
+  color: black;
 }
 
 span {
-   color: #f95738;
+  color: #f95738;
 }
 
-.header__menu {
-   display: none;
+.header__menu, .hiddenNav{
+  display: none;
 }
 
-@media screen and (max-width:800px) {
-   .header__middle, .header__right {
-      display: none;
-   }
+@media screen and (max-width: 800px) {
+  .header__middle,
+  .header__right {
+    display: none;
+  }
 
-   .header__menu {
-      display: flex;
-   }
+  .header__menu {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .hiddenNav {
+    position: fixed;
+    top: 4.1rem;
+    width: 70%;
+    height: calc(100vh - 4.1rem);
+    padding: 2rem 0;
+    background-color: #0d1b2a;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    align-items: center;
+    font-size: 1.3rem;
+  }
+
+  .hiddenNav > * {
+    border-bottom: 1px solid white;
+  }
+
+  /* .hiddenNav *:hover{
+      color: red;
+   } */
+
+  .hide {
+    display: none;
+    /* transform: translateX(-200%); */
+  }
+
+  .nav-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    transform: translateX();
+    transition: all 0.3s;
+  }
 }
