--- a/src/Components/checkoutForm/CheckoutForm.css
+++ b/src/Components/checkoutForm/CheckoutForm.css
@@ -1,46 +1,22 @@
-.checkout {
-  width: 80%;
-  margin: 2rem auto;
-}
-
 .width {
    flex: 0.5;
+}
+
+.checkout {
+  margin: 0.8rem 0;
+  width: 100%;
 }
 
 .checkout > form {
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 .pay > button {
   background-color: #0d1b2a;
   color: whitesmoke;
 }
-
-/* div {
-       width: 100%;
-     }
- 
-     label {
-       display: block;
-       font-size: 1.4rem;
-       font-weight: 500;
-     }
-     input[type="text"],
-     .select,
-     .card-details {
-       display: block;
-       font-size: 1.6rem;
-       font-weight: 300;
-       padding: 1rem;
-       margin: 1rem auto;
-       width: 100%;
-       border: 1px solid #777;
-       border-radius: 3px;
-       outline: none;
-     }
-   }
- } */
 
 @media screen and (max-width: 700px) {
   .checkout > form {
