--- a/src/Components/product/Product.css
+++ b/src/Components/product/Product.css
@@ -1,19 +1,17 @@
 .product {
   display: flex;
-  position: relative;
-  gap: 2rem;
+  gap: 1rem;
+  
 }
 
 .filter {
-  width: 20%;
-  border: 2px solid var(--dark-blue);
+ flex: 0.3;
   transition: all 0.3s;
 }
 
 .product__content {
-  width: 80%;
-  padding-left: 5px;
-  position: relative;
+  flex: 1;
+  padding: 1rem;
   
 }
 .content > .icon {
@@ -30,16 +28,56 @@
   padding-left: 5px;
 }
 
-@media screen and (max-width: 700px) {
-  .filter {
+.hiddenFilter {
+  display: none;
+}
+
+.showFilter {
+  display: none;
+}
+
+
+
+@media screen and (max-width: 800px) {
+  .filter__container{
+     margin-top: 0.4rem !important;
+   }
+
+  .showFilter {
+    display: block;
+    text-align: right;
+  }
+
+  .filter__container > .categoryy > button {
+    color: white;
+  }
+
+  .filter__button {
+    border: none;
+    color: #0d1b2a !important;
+    background-color: white !important;
+    font-size: 1.2rem !important;
+    font-weight: 600 !important;
+    border-radius: 3px;
+  }
+
+  .hiddenFilter {
+    position: fixed;
+    left: 0;
+    top: 4.1rem;
     width: 50%;
-    background-color: #fff;
-    border: 2px solid var(--dark-blue);
-    position: absolute;
-    left: -200%;
-    height: 100%;
-    padding: 1rem;
-    z-index: 99;
+    height: calc(100vh - 4.1rem);
+    background-color: #0a1622;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    align-items: center;
+    font-size: 1.3rem;
+  }
+
+  .filter {
+    display: none;
   }
   .show {
     left: 0;
@@ -56,10 +94,4 @@
   margin-left: 10rem;
   text-align: center;
   padding: 3rem;
-}
-
-.containerSize {
-  width: 80%;
-  margin: 0 auto;
-
 }
