--- a/src/Components/product/ProductDetails.css
+++ b/src/Components/product/ProductDetails.css
@@ -1,9 +1,9 @@
-.productDetails__container {
-  width: 80%;
-  margin: 1rem auto;
-}
 .product > .review {
   border-top: 1px solid #ccc;
+}
+
+.productDetails {
+  margin: 0.8rem 0;
 }
 .product__details {
   padding-top: 2rem;
@@ -15,11 +15,11 @@
 }
 
 .product__details > .img {
-  width: 35%;
+  width: 45%;
 }
 
 .product__details > .img > img {
-  width: 90%;
+  width: 100%;
 }
 
 .productDetails__content {
@@ -60,42 +60,16 @@
   border-radius: 3px;
 }
 
-/* .product__details > .img {
-  width: 45%;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-.product__details > .img > img {
-  width: 100%;
-}
-
-.productDetails__content {
-  width: 55%;
-  padding: 0 5px;
-}
-.product > .content > * {
-  margin-bottom: 1rem;
-}
-.product > .content > .price {
-  color: orangered;
-  font-weight: 500;
-}
-
-
-.product > .content > .count > * {
-  margin-right: 1rem;
-} */
-
 @media screen and (max-width: 700px) {
-  .product > .details {
+  .product__details {
     flex-direction: column;
   }
 
-  .product > .details > .img {
+  .product__details > .img {
     width: 100%;
   }
 
-  .product > .details > .content {
+  .productDetails__content {
     width: 100%;
   }
 }
