--- a/src/Components/product/ProductFilter.css
+++ b/src/Components/product/ProductFilter.css
@@ -1,13 +1,18 @@
+.filter__container{
+ text-align: center;
+  padding: 1rem;
+  margin-top: 2.8rem;
+}
 
 .filter__container > h4 {
-  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
-.filter__container > .category > button {
+.filter__container > .categoryy > button {
   display: block;
-  text-align: left;
-  width: 80%;
+  text-align: center;
+  width: 100%;
   height: 3rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -42,17 +47,6 @@
   }
 }
 
-.active {
-  position: relative;
-  padding-left: 1rem;
-}
 
-.active::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 2px;
-  height: 100%;
-  background-color: var(--color-danger);
-}
+
+
