--- a/src/Components/product/ProductList.css
+++ b/src/Components/product/ProductList.css
@@ -1,11 +1,13 @@
 .product-list {
   width: 100%;
+  margin: 1rem 0;
+  
 }
 
 .grids {
   background-color: rgb(74, 72, 72);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 10px;
   padding: 10px;
   border-radius: 3px;
@@ -31,7 +33,8 @@
 .sort {
   display: flex;
   align-items: center;
-  gap: 4px;
+  margin-left: 10px;
+  
 }
 
 .sort > label {
@@ -41,6 +44,7 @@
   
 }
 .sort > select {
+  
   font-size: 1.2rem;
   border: none;
   outline: none;
@@ -50,16 +54,15 @@
   .top {
     flex-direction: column;
     align-items: start;
-    padding-bottom: 5px;
   }
   .search {
     width: 100%;
   }
 }
 
-.grid {
+/* .grid {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   background-color: #fffdf7;
-}
+} */
