--- a/src/Pages/cart/Cart.css
+++ b/src/Pages/cart/Cart.css
@@ -15,6 +15,7 @@
    width: 100%;
    font-size: 1rem;
    margin-top: 0.5rem;
+   overflow-x: auto;
  }
  
  .cart > .table > table > thead {
@@ -47,12 +48,12 @@
     background-color: #eee;
  }
  
- .cart > .table > .summary {
+ /* .cart > .table > .summary {
     margin-top: 2rem;
       display: flex;
       justify-content: space-between;
       align-items: start;
- }
+ } */
  
  .cart__card > .text{
     display: flex;
@@ -77,12 +78,14 @@
    color: white;
  }
 
- .cart__card > button, .summary > button {
+ .clearcart {
    background-color: #0d1b2a;
    color: white;
    border: none;
    padding: 8px 2rem;
    border-radius: 3px;
+   margin:0 auto;
+    display:block;
  }
 
  .checkout {
