--- a/src/Components/product/Product.css
+++ b/src/Components/product/Product.css
@@ -63,6 +63,8 @@
 
   .hiddenFilter {
     position: fixed;
+    padding: 0 3rem;
+    padding-bottom: 4rem;
     left: 0;
     top: 4.1rem;
     width: 50%;
@@ -74,6 +76,7 @@
     gap: 0.8rem;
     align-items: center;
     font-size: 1.3rem;
+    z-index: 99;
     overflow-y: scroll;
   }
 
@@ -88,6 +91,12 @@
   }
   .content .icon {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .hiddenFilter {
+    width: 70%;
   }
 }
 
