--- a/src/Components/product/ProductItem.css
+++ b/src/Components/product/ProductItem.css
@@ -83,3 +83,9 @@
   border: none;
   border-radius: 4px;
 }
+
+@media screen and (max-width: 460px) {
+  .grid {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  }
+}
