--- a/src/Components/Loader.css
+++ b/src/Components/Loader.css
@@ -8,9 +8,12 @@
  
  .loader {
    position: fixed;
-   left: 50%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   /* left: 50%;
    top: 50%;
-   transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%); */
    z-index: 999;
  }
  
