--- a/src/Components/product/ProductList.css
+++ b/src/Components/product/ProductList.css
@@ -16,6 +16,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  gap: 10px;
   align-items: center;
 }
 
@@ -45,7 +46,6 @@
 }
 .sort > select {
   background-color: #0d1b2a;
-  margin-right: 10px;
   color:white;
   font-size: 1.2rem;
   border: none;
@@ -56,6 +56,7 @@
   .top {
     flex-direction: column;
     align-items: start;
+    gap: 0;
   }
   .search {
     width: 100%;
